flac packetizer does not output last frame
By design, current flac packetizer never outputs last frame
By design, current flac packetizer never outputs last frame
added Component::Packetizers Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
commit 34abc32f Author: Francois Cartegnie fcvlcdev@free.fr Date: Fri Jan 10 15:13:10 2014 +0100
packetizer: flac: process end of streambuffer (fix [#10340](https://code.videolan.org/videolan/vlc/-/issues/10340))
added Status::fixed label
closed
changed milestone to %2.2.x maintenance branch
VideoLAN code repository instance