packetizer: flac: process end of streambuffer (fix #10340)